--- a/shared/locales/src/jamboree/machine-fr.json
+++ b/shared/locales/src/jamboree/machine-fr.json
@@ -1,19 +1,19 @@
 {
   "02017e6d-47b0-4867-b590-be85a9b72008": {
-    "original": "Beperk eenheiden",
+    "original": "Beperk eenheden",
     "translation": "Limiter les unités"
   },
   "0208e14e-b26e-4411-9e8e-461b63b1c0c1": {
-    "original": "Vertel Jamboree door aan andere eenheiden",
-    "translation": "Informez Jamboree auprès d'autres unités"
+    "original": "Vertel Jamboree door aan andere eenheden",
+    "translation": "Faites connaître Jamboree à d'autres unités"
   },
   "022aad3d-6250-4000-9336-4ae7e8e75c23": {
     "original": "Alle leden met deze functie, krijgen automatisch toegangsrechten tot de leeftijdsgroep van een eenheid waarvoor de functie werd toegevoegd - enkel voor één specifiek scoutsjaar.",
     "translation": "Tous les membres ayant cette fonction obtiennent automatiquement des droits d'accès au groupe d'âge d'une unité pour laquelle la fonction a été ajoutée - uniquement pour une année scoute spécifique."
   },
   "02f2c884-7524-4c41-90c9-746a074185aa": {
-    "original": "Sla een kopie van jouw zaalplan op zodat je het kan delen met andere eenheiden.",
-    "translation": "Enregistrez une copie de votre plan de salle afin de pouvoir le partager avec d’autres unités."
+    "original": "Sla een kopie van jouw zaalplan op zodat je het kan delen met andere eenheden.",
+    "translation": "Enregistrez une copie de votre plan de salle afin de pouvoir le partager avec d'autres unités."
   },
   "05479234-2977-4bfd-a44b-924b01021b6e": {
     "original": "Op aanraden van andere eenheid / persoon",
@@ -188,7 +188,7 @@
     "translation": "Numéro d'unité"
   },
   "2803b7f1-be08-48ec-8b4c-2dced27f7113": {
-    "original": "Breid het aantal gegevens van eenheiden zelf nog uit.",
+    "original": "Breid het aantal gegevens van eenheden zelf nog uit.",
     "translation": "Élargissez vous-même le nombre de données des unités."
   },
   "29343dad-93c5-4e72-a6d5-3960cfbfcf42": {
@@ -232,8 +232,8 @@
     "translation": "Cette unité n’existe pas"
   },
   "31982300-fbbf-4f5a-b7ce-26738bd2b23d": {
-    "original": "Je kan een beheerder volledige toegang geven tot alle eenheiden (en dus ook de leden van die eenheid), of per tag de toegang regelen.",
-    "translation": "Vous pouvez donner à un administrateur un accès complet à toutes les unités (et donc aussi aux membres de cette unité), ou gérer l’accès par tag."
+    "original": "Je kan een beheerder volledige toegang geven tot alle eenheden (en dus ook de leden van die eenheid), of per tag de toegang regelen.",
+    "translation": "Vous pouvez donner à un administrateur un accès complet à toutes les unités (et donc aussi aux membres de cette unité), ou gérer l'accès par balise."
   },
   "31e91d3b-16e5-4608-9390-75e61d4d090d": {
     "original": "Je kan het huidig scoutsjaar hier wijzigen. Zorg dat je voor dit scoutsjaar alle aansluitingen hebt ingesteld. Ga daarvoor naar 'aansluitingen en verzekeringen' en voeg het scoutsjaar toe en stel de nieuwe prijzen en periodes correct in.",
@@ -280,7 +280,7 @@
     "translation": "Vous avez déjà ajouté des paramètres pour chaque année scoute"
   },
   "3c584bf6-7e0a-4348-a5e9-2bc0bcb00bde": {
-    "original": "Schulden van eenheiden",
+    "original": "Schulden van eenheden",
     "translation": "Dettes des unités"
   },
   "3e94193d-873b-4770-ba03-5f7528debf2c": {
@@ -328,15 +328,15 @@
     "translation": "Nom d'unité"
   },
   "47e866d9-5349-4318-b779-161da61c2250": {
-    "original": "Openstaande bedragen tussen eenheiden",
-    "translation": "Montants en suspens entre les unités"
+    "original": "Openstaande bedragen tussen eenheden",
+    "translation": "Montants dus entre unités"
   },
   "48148df3-81a8-439e-a368-64355aa7da6e": {
     "original": "Lid betaald rechtstreeks aan GSB",
     "translation": "Membre paie directement au GSB"
   },
   "4835dfd4-10b0-4e91-b581-d1b3eefa73f7": {
-    "original": "Alle eenheiden",
+    "original": "Alle eenheden",
     "translation": "Toutes les unités"
   },
   "49742012-1ca8-4b91-a176-9ce3e17c1fe0": {
@@ -380,7 +380,7 @@
     "translation": "Vérifiez si vous avez un autre onglet Jamboree ouvert et fermez-le. Votre navigateur ne prend pas en charge certaines fonctions, ce qui nous empêche de conserver les commandes hors ligne si votre connexion Internet tombe en panne. Essayez de recharger la page ou de travailler dans un autre navigateur."
   },
   "4fa242b7-c05d-44d4-ada5-fb60e91af818": {
-    "original": "Er zijn nog geen eenheiden",
+    "original": "Er zijn nog geen eenheden",
     "translation": "Il n'y a pas encore d'unités"
   },
   "50ebabe0-8162-486d-b32a-9ef3016256fb": {
@@ -472,8 +472,8 @@
     "translation": "Fonctions propres à l'unité"
   },
   "5fe7a400-8c6a-42ba-b920-c8518e60e091": {
-    "original": "Beperk welke eenheiden hun leden kunnen aansluiten met deze aansluiting.",
-    "translation": "Limitez les unités qui peuvent affilier leurs membres avec cette affiliation."
+    "original": "Beperk welke eenheden hun leden kunnen aansluiten met deze aansluiting.",
+    "translation": "Limiter les unités qui peuvent affilier leurs membres avec cette affiliation."
   },
   "601c15e5-cfb0-4c34-af03-7dfc55e39d36": {
     "original": "Je kan geen aansluitingen maken voor een andere eenheid",
@@ -560,12 +560,12 @@
     "translation": "description de votre unité"
   },
   "6b39d554-a4a7-489c-84b5-3f430457dd50": {
-    "original": "Contactpersonen voor schulden van andere eenheiden",
+    "original": "Contactpersonen voor schulden van andere eenheden",
     "translation": "Personnes de contact pour les dettes d'autres unités"
   },
   "6bf80a05-84b0-47ba-ad41-66e2a106669b": {
-    "original": "Filter alle eenheiden die een lid hebben die aan deze voorwaarden voldoet.",
-    "translation": "Filtrez toutes les unités qui ont un membre qui répond à ces conditions."
+    "original": "Filter alle eenheden die een lid hebben die aan deze voorwaarden voldoet.",
+    "translation": "Filtrer toutes les unités qui ont un membre qui répond à ces conditions."
   },
   "6e675a7d-b124-4507-bf0c-9b70013e98ca": {
     "original": "Er bestaat al een eenheid met dezelfde URI. Pas deze aan zodat deze uniek is, en controleer of deze eenheid niet al bestaat.",
@@ -592,8 +592,8 @@
     "translation": "Scoutsgroep De Goudvis sur Jamboree"
   },
   "7046d9e3-c3ce-406b-af52-fd2c81220867": {
-    "original": "Geen eenheiden gevonden. Probeer te zoeken op postcode of naam. Is jouw eenheid nog niet aangesloten? Maak dan eerst een eenheid aan.",
-    "translation": "Aucune unité trouvée. Essayez de rechercher par code postal ou par nom. Votre unité n’est pas encore connectée ? Créez d’abord une unité."
+    "original": "Geen eenheden gevonden. Probeer te zoeken op postcode of naam. Is jouw eenheid nog niet aangesloten? Maak dan eerst een eenheid aan.",
+    "translation": "Aucune unité trouvée. Essayez de rechercher par code postal ou par nom. Votre unité n'est pas encore affiliée ? Créez d'abord une unité."
   },
   "7066aee7-9e51-4767-b288-460646ceca50": {
     "original": "Nieuwe eenheid",
@@ -616,7 +616,7 @@
     "translation": "Les champs {unlinkedAnswersText} ont été modifiés manuellement et ne sont plus automatiquement liés aux valeurs de Jamboree"
   },
   "735ec53c-5b23-469a-9365-d1216e1c739b": {
-    "original": "Geen eenheiden gevonden. Probeer te zoeken op postcode of naam.",
+    "original": "Geen eenheden gevonden. Probeer te zoeken op postcode of naam.",
     "translation": "Aucune unité trouvée. Essayez de rechercher par code postal ou par nom."
   },
   "74303d1c-2700-4340-816e-03cb9c3fb188": {
@@ -628,8 +628,8 @@
     "translation": "Votre unité paie {price} à GSB."
   },
   "768afe13-5f57-4a82-a6ac-77c8999b8aeb": {
-    "original": "Jamboree toont op enkele plaatsen het logo van Jamboree op jullie webshop. Op die manier kunnen we Jamboree bekender maken bij andere eenheiden, waardoor we Jamboree ook betaalbaar kunnen houden. Je kan dit verminderen als je dit toch liever niet wilt.",
-    "translation": "Jamboree affiche le logo de Jamboree à certains endroits sur votre boutique en ligne. De cette façon, nous pouvons faire connaître Jamboree à d'autres unités, ce qui nous permet également de maintenir Jamboree abordable. Vous pouvez réduire cela si vous préférez."
+    "original": "Jamboree toont op enkele plaatsen het logo van Jamboree op jullie webshop. Op die manier kunnen we Jamboree bekender maken bij andere eenheden, waardoor we Jamboree ook betaalbaar kunnen houden. Je kan dit verminderen als je dit toch liever niet wilt.",
+    "translation": "Jamboree affiche le logo de Jamboree à certains endroits sur votre boutique en ligne. De cette manière, nous pouvons faire connaître Jamboree auprès d'autres unités, ce qui nous permet aussi de maintenir Jamboree abordable. Vous pouvez réduire ceci si vous préférez ne pas le faire."
   },
   "76b00f58-a587-431f-9c28-1b86d394fc26": {
     "original": "Stel in welke soorten lokalen eenheden kunnen toevoegen",
@@ -652,7 +652,7 @@
     "translation": "Attention : si vous modifiez le lien vers votre boutique en ligne, certains liens dans les e-mails déjà envoyés risquent de ne plus fonctionner. La seule exception est si vous passez d'un lien Jamboree standard à un nom de domaine propre (les anciens liens continueront alors à fonctionner). Ne faites cela qu'au début d'une vente."
   },
   "7b181446-ef56-4957-ad13-54644e6d0987": {
-    "original": "Dit is een ongeldige situatie. Een schuld moet tussen verschillende eenheiden zijn.",
+    "original": "Dit is een ongeldige situatie. Een schuld moet tussen verschillende eenheden zijn.",
     "translation": "Ceci est une situation invalide. Une dette doit être entre différentes unités."
   },
   "7c2fee1a-0838-4346-848d-a3d984e70fdc": {
@@ -744,8 +744,8 @@
     "translation": "Unité artistique"
   },
   "919139ab-1103-4e1b-aaf7-94cfec03a9e3": {
-    "original": "Alle eenheiden in {name}",
-    "translation": "Toutes les unités dans {name}"
+    "original": "Alle eenheden in {name}",
+    "translation": "Toutes les unités de {name}"
   },
   "91e43562-956f-41ac-b5b6-a8bcb63edd66": {
     "original": "Deze domeinnaam is al in gebruik door een andere eenheid. Neem contact op met Jamboree als je denkt dat je toch toegang zou moeten krijgen.",
@@ -864,8 +864,8 @@
     "translation": "Jamboree est en ordre"
   },
   "a7585599-1c67-4de7-b552-f5b78c7385db": {
-    "original": "Schakel dit in om leden en eenheiden automatisch te verwittigen als hun openstaand bedrag stijgt.",
-    "translation": "Activez cette option pour avertir automatiquement les membres et les unités si leur montant restant dû augmente."
+    "original": "Schakel dit in om leden en eenheden automatisch te verwittigen als hun openstaand bedrag stijgt.",
+    "translation": "Activez cette option pour avertir automatiquement les membres et les unités si leur montant dû augmente."
   },
   "a9605085-cd44-454d-9386-3dd30206f3bf": {
     "original": "Opgelet, deze beheerders zijn ook niet aangesloten bij GSB, en zijn dus ook niet verzekerd. Gebruik met mate, bv. om externen toegang te geven voor evenementen.",
@@ -1120,11 +1120,11 @@
     "translation": "Vous ne pouvez attribuer une fonction qu'aux membres inscrits à l'année scoute actuelle"
   },
   "d431d7b4-8cdd-4307-bb73-2c570fc1a0fa": {
-    "original": "Toegang tot eenheiden",
+    "original": "Toegang tot eenheden",
     "translation": "Accès aux unités"
   },
   "d4a9ca3f-72c9-4418-90fa-5d648b23ee7e": {
-    "original": "Alle eenheiden",
+    "original": "Alle eenheden",
     "translation": "Toutes les unités"
   },
   "d54c9b23-2d3c-49cd-b1fc-7e821d36fd41": {
@@ -1156,7 +1156,7 @@
     "translation": "Utiliser le logo de l'unité"
   },
   "d94db7a1-4167-440a-b556-62ff3291555b": {
-    "original": "Eenheiden",
+    "original": "Eenheden",
     "translation": "Unités"
   },
   "da2d2d9e-07cc-471e-963a-7915c7698ba9": {
@@ -1236,7 +1236,7 @@
     "translation": "Groupe scout Les poissons rouges"
   },
   "e6405d38-2bd8-4e24-8e35-24f4daea2a37": {
-    "original": "Gegevens van eenheiden",
+    "original": "Gegevens van eenheden",
     "translation": "Données des unités"
   },
   "e6da382b-6acc-4a77-ab74-ece7ea002d5f": {
@@ -1348,7 +1348,7 @@
     "translation": "Cette année scoute est verrouillée, vous ne pouvez plus ajouter de groupes d'inscription"
   },
   "f5bf8b84-52d2-49a3-b4b4-73573b320739": {
-    "original": "Kies welke informatie je verzamelt van eenheiden",
+    "original": "Kies welke informatie je verzamelt van eenheden",
     "translation": "Choisissez les informations que vous collectez auprès des unités"
   },
   "f6360ada-86e7-4ec8-86fb-fe9e750c4926": {
@@ -1384,7 +1384,7 @@
     "translation": "Jamboree peut modifier automatiquement le contenu des documents si les données correspondantes changent et créer de nouveaux documents si de nouvelles inscriptions arrivent (même après publication). C'est idéal pour permettre aux membres de compléter des données manquantes ou erronées via le portail des membres. Au moment où vous avez officiellement soumis vos documents (le cas échéant), il est préférable de désactiver cette option. Si cette option est désactivée, les documents incomplets ne seront plus visibles pour les membres."
   },
   "fafaf0c2-cbf4-4f5b-8669-eb09303efe1e": {
-    "original": "Je moet volledige platform beheerder zijn om schulden tussen eenheiden te wijzigen of toe te voegen",
+    "original": "Je moet volledige platform beheerder zijn om schulden tussen eenheden te wijzigen of toe te voegen",
     "translation": "Vous devez être administrateur complet de la plateforme pour modifier ou ajouter des dettes entre les unités"
   },
   "fcd3549b-1d81-4fe7-9e8f-fcd17501c014": {
